[ Add ] added product hint icon

--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -2635,3 +2635,12 @@ p {
   font-size: 13px;
   opacity: 0.9;
 }
+
+.product-hunt {
+  color: #ff6154 !important;
+      font-size: 25px;
+          background: white;
+            border-radius: 100%;
+cursor: pointer;
+          }
+
