--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -2690,3 +2690,24 @@ p {
   font-style: initial;
   font-weight: 400;
 }
+
+.logo-slider-1 img,
+.logo-slider-2 img {
+  width: 100px !important;
+}
+
+.action-btn {
+  animation: animation 5s infinite;
+}
+
+@keyframes animation {
+  0% {
+    scale: 1;
+  }
+  50% {
+    scale: 1.075;
+  }
+  100% {
+    scale: 1;
+  }
+}
