--- a/assets/css/lineicons.css
+++ b/assets/css/lineicons.css
@@ -5,9 +5,13 @@ Author: lineicons.com
 
 -------------------------------- */
 @font-face {
-  font-family: 'LineIcons';
-  src: url('../fonts/LineIcons.eot');
-  src: url('../fonts/LineIcons.eot') format('embedded-opentype'), url('../fonts/LineIcons.woff2') format('woff2'), url('../fonts/LineIcons.woff') format('woff'), url('../fonts/LineIcons.ttf') format('truetype'), url('../fonts/LineIcons.svg') format('svg');
+  font-family: "LineIcons";
+  src: url("../fonts/LineIcons.eot");
+  src: url("../fonts/LineIcons.eot") format("embedded-opentype"),
+    url("../fonts/LineIcons.woff2") format("woff2"),
+    url("../fonts/LineIcons.woff") format("woff"),
+    url("../fonts/LineIcons.ttf") format("truetype"),
+    url("../fonts/LineIcons.svg") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -16,13 +20,13 @@ Author: lineicons.com
 -------------------------*/
 .lni {
   display: inline-block;
-  font: normal normal normal 1em/1 'LineIcons';
+  font: normal normal normal 1em/1 "LineIcons";
   color: inherit;
   flex-shrink: 0;
   speak: none;
   text-transform: none;
   line-height: 1;
-  vertical-align: -.125em;
+  vertical-align: -0.125em;
   /* Better Font Rendering */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -2207,4 +2211,10 @@ Author: lineicons.com
 
 .lni-zoom-out::before {
   content: "\ec14";
+}
+
+.text-gradient {
+  background: linear-gradient(to right, #ffffff 0%, #e7e7e7 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
